<resources>
    <string name="app_name">WikiPill</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_text">--</string>
    <string name="channel_name">abcdef</string>
    <string name="channel_description">description</string>
    <string name="daily_pills_intake">Daily Pills intake</string>
    <string name="diseases_ratio">Diseases Ratio:</string>
    <string name="total_number_of_days">Total number of days:</string>
    <string name="health_report">Health Report</string>
    <string name="chicken_pox">CHICKEN POX</string>
    <string name="zovirax">Zovirax</string>
    <string name="per_day_limit_4">PER DAY LIMIT: 4</string>
    <string name="calamine_lotion">Calamine Lotion</string>
    <string name="cold_and_flu">COLD AND FLU</string>
    <string name="taken_5_5">TAKEN: 5/5</string>
    <string name="dextromethorphan">Dextromethorphan</string>
    <string name="time_before_lunch">TIME: BEFORE LUNCH</string>
    <string name="diphenhydramine_benadryl">Diphenhydramine (Benadryl®)</string>
    <string name="time_morning">TIME: MORNING</string>
    <string name="per_day_limit_1">PER DAY LIMIT: 1</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="time_bed_time">TIME: BED TIME</string>
    <string name="acetaminophen">Acetaminophen</string>
    <string name="doctor_info">DOCTOR INFO.</string>
    <string name="see_your_doctor_here">See your doctor here</string>
    <string name="profile">PROFILE</string>
    <string name="performance_and_statistics">Performance And Statistics</string>
    <string name="heart_rate_monitor">HEART RATE MONITOR</string>
    <string name="check_your_bpm">Check your BPM</string>
    <string name="current_diagnosis">CURRENT DIAGNOSIS</string>
    <string name="see_your_medicines_here">See your medicines here</string>
    <string name="shared_reports">SHARED REPORTS</string>
    <string name="see_the_reports_of_your_loved_one_s">See the reports of your loved one\'s</string>
    <string name="case_history">CASE HISTORY</string>
    <string name="past_diseases">Past diseases</string>
    <string name="medicine_log">MEDICINE LOG</string>
    <string name="all_about_medicines">All about medicines</string>
    <string name="common_cold">COMMON COLD</string>
    <string name="fexofay_a">FEXOFAY-A</string>
    <string name="taken_0">TAKEN: 0</string>
    <string name="saridon">SARIDON</string>
    <string name="time_after_lunch">TIME: AFTER LUNCH</string>
    <string name="per_day_limit_2">PER DAY LIMIT: 2</string>
    <string name="paracip_500">PARACIP-500</string>
    <string name="mark_as_taken">Mark As Taken</string>
    <string name="time_4_times_a_day">TIME: 4 TIMES A DAY</string>
    <string name="per_day_limit_6">PER DAY LIMIT: 6</string>
    <string name="wikki">Wikki</string>
    <string name="pills">Pills</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="otp">OTP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="interface_for_dyslexic_users">Interface for Dyslexic Users</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">HINDI</string>
    <string name="kannada">KANNADA</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Precautions: \n\n1. Wear long-sleeve shirts and long pants. \n2. Treat clothes with repellents like permethrin.\n3. Use EPA-registered mosquito repellent like    DEET.</string>
    <string name="about_me">Common Disease in your area : Malaria</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Vivek Kumar</string>
    <string name="language">LANGUAGE:</string>
    <string name="name">Name:</string>
    <string name="dose">Dose:</string>
    <string name="_1_per_day">1 Per Day</string>
    <string name="time">Time:</string>
    <string name="bed_time">Bed Time</string>
    <string name="program">Program</string>
    <string name="total_8_weeks_6_weeks_left">Total 8 weeks | 6 weeks left</string>
    <string name="quantity">Quantity</string>
    <string name="total_56_capsules_42_capsules_left">Total 56 capsules | 42 capsules left</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="namehint">Name</string>
    <string name="dosehint">Dose</string>
    <string name="timehint">Time</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="dengue">DENGUE</string>
    <string name="medicine_reminder">Medicine Reminder</string>
    <string name="calculating">Calculating...</string>
    <string name="fexofenadine">Fexofenadine</string>
    <string name="description">Description:</string>
    <string name="fexofenadine_is_a_very_effective_medication_to_treat_allergic_symptoms_associated_with_rhinitis_and_utricaria_allergies_such_as_runny_nose_watery_eyes_sneezing_skin_itching_and_hives_can_be_effectively_treated_with_this_medicine_it_is_also_used_to_treat_seasonal_allergies_in_adults_and_children">Fexofenadine is a very effective medication to treat allergic symptoms associated with Rhinitis and Utricaria. Allergies such as runny nose, watery eyes, sneezing, skin itching and hives can be effectively treated with this medicine. It is also used to treat seasonal allergies in adults and children.</string>
    <string name="general_instructions">General Instructions:</string>
    <string name="take_fexofenadine_as_prescribed_by_the_doctor_you_should_ensure_that_consumption_does_not_exceed_the_daily_prescribed_limit_consult_your_doctor_if_symptoms_do_not_improve_or_get_worse_after_using_this_medicine">Take Fexofenadine as prescribed by the doctor. You should ensure that consumption does not exceed the daily prescribed limit. Consult your doctor if symptoms do not improve or get worse after using this medicine.</string>
    <string name="side_effects">Side Effects:</string>
    <string name="major_and_minor_side_effects">Major and minor side effects</string>
    <string name="vomiting">Vomiting</string>
    <string name="headache">Headache</string>
    <string name="coughing">Coughing</string>
    <string name="painful_menstruation">Painful menstruation</string>
    <string name="pain_in_the_arms_and_legs">Pain in the arms and legs</string>
    <string name="hives_and_redness_of_skin_severe_rare">Hives and redness of skin (SEVERE,RARE)</string>
    <string name="swelling_of_face_lips_eyelids_tongue_hands_and_feet_severe_rare">Swelling of face, lips, eyelids, tongue, hands and feet (SEVERE,RARE)</string>
    <string name="difficulty_in_breathing_severe_rare">Difficulty in breathing (SEVERE,RARE)</string>
    <string name="difficulty_in_swallowing_severe_rare">Difficulty in swallowing (SEVERE,RARE)</string>
    <string name="convulsions">Convulsions</string>
    <string name="warnings">Warnings:</string>
    <string name="warnings_for_special_population">Warnings for special population:</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="this_medicine_should_be_used_with_caution_in_pregnant_women_all_the_potential_benefits_and_associated_risks_should_be_considered_consult_your_doctor_before_taking_this_medicine">This medicine should be used with caution in pregnant women. All the potential benefits and associated risks should be considered. Consult your doctor before taking this medicine.</string>
    <string name="breast_feeding">Breast-feeding</string>
    <string name="this_medicine_should_be_used_with_caution_in_breastfeeding_women_consult_your_doctor_before_taking_it">This medicine should be used with caution in breastfeeding women. Consult your doctor before taking it.</string>
    <string name="general_warnings">General warnings:</string>
    <string name="allergic_reaction">Allergic Reaction</string>
    <string name="this_medicine_is_likely_to_cause_moderate_to_severe_allergic_reactions_and_the_likelihood_is_very_high_in_patients_who_are_known_to_have_an_antibiotic_allergy_report_the_occurrence_of_any_such_reaction_to_the_doctor_on_priority_appropriate_corrective_measures_and_replacement_with_a_suitable_alternative_may_be_necessary_based_on_the_clinical_condition">This medicine is likely to cause moderate-to-severe allergic reactions and the likelihood is very high in patients who are known to have an antibiotic allergy. Report the occurrence of any such reaction to the doctor on priority. Appropriate corrective measures and replacement with a suitable alternative may be necessary based on the clinical condition.</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="antibiotic_therapy_will_cause_an_imbalance_in_the_normal_microbial_flora_of_the_large_intestine_which_may_promote_the_growth_of_a_bacteria_called_clostridium_difficile_and_you_may_experience_severe_diarrhea_as_a_result_report_any_such_incidence_to_the_doctor_on_priority_appropriate_dose_adjustments_or_replacement_with_a_suitable_alternative_may_be_required_based_on_the_clinical_condition">Antibiotic therapy will cause an imbalance in the normal microbial flora of the large intestine, which may promote the growth of a bacteria called Clostridium difficile and you may experience severe diarrhea as a result. Report any such incidence to the doctor on priority. Appropriate dose adjustments or replacement with a suitable alternative may be required based on the clinical condition.</string>
    <string name="mononucleosis">Mononucleosis</string>
    <string name="this_medicine_is_not_recommended_for_use_in_patients_with_mononucleosis_due_to_the_increased_risk_of_severe_adverse_effects_replacement_with_a_suitable_alternative_should_be_considered_based_on_the_clinical_condition">This medicine is not recommended for use in patients with mononucleosis due to the increased risk of severe adverse effects. Replacement with a suitable alternative should be considered based on the clinical condition.</string>
    <string name="drug_resistance">Drug-resistance</string>
    <string name="usage_of_this_medicine_without_sufficient_proof_or_suspicion_of_a_bacterial_infection_should_be_avoided_irrational_dosing_might_fail_in_providing_the_benefits_and_even_cause_toxicity_it_may_also_increase_the_risk_of_development_of_bacteria_that_are_drug_resistant">Usage of this medicine without sufficient proof or suspicion of a bacterial infection should be avoided. Irrational dosing might fail in providing the benefits and even cause toxicity. It may also increase the risk of development of bacteria that are drug resistant.</string>
    <string name="this_medicine_should_be_used_with_caution_in_patients_with_known_history_of_renal_diseases_due_to_the_increased_risk_of_severe_adverse_effects_close_monitoring_of_kidney_function_appropriate_dose_adjustments_or_replacement_with_a_suitable_alternative_may_be_required_in_some_cases_based_on_the_clinical_condition">This medicine should be used with caution in patients with known history of renal diseases due to the increased risk of severe adverse effects. Close monitoring of kidney function, appropriate dose adjustments, or replacement with a suitable alternative may be required in some cases based on the clinical condition.</string>
    <string name="concerns">Concerns:</string>
    <string name="commonly_asked_questions">Commonly asked questions</string>
    <string name="onset_of_action">Onset of action</string>
    <string name="the_effect_of_this_medicine_can_be_observed_within_30_minutes_of_administration">The effect of this medicine can be observed within 30 minutes of administration.</string>
    <string name="_2_times_today">2 times Today</string>
    <string name="saradon">Saradon</string>
    <string name="paracip">Paracip</string>
    <string name="saradin">Saradin</string>
</resources>