<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottomSheetContainer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/add_new_medicine"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/add_new_medicine"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namehint"
        android:layout_below="@+id/add_new_medicine"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/medicine_name"
        android:imeOptions="actionNext"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dosehint"
        android:layout_below="@+id/medicine_name"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/dose"
        android:imeOptions="actionNext"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timehint"
        android:layout_below="@+id/dose"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/time"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:text="@string/add_medicine"
        android:id="@+id/button_add"
        android:textColor="@color/colorWhiteTitle"
        android:background="@drawable/button"
        android:padding="20sp"
        android:layout_margin="40dp"/>

</RelativeLayout>