<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MedicineFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_margin="8dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D7D4D8"
        app:cardCornerRadius="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_medicine1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fexofay_a"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="27sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_times_today"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhiteTitle"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:clickable="true"
                android:id="@+id/fexofayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:text="0/1"
                android:padding="10sp"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10sp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D7D4D8"
        app:cardCornerRadius="20sp"
        android:layout_toRightOf="@+id/card1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_medicine2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saradon"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="27sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_times_today"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhiteTitle"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Button
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:text="1/1"
                android:id="@+id/saradinButton"
                android:padding="10sp"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_margin="8dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card1"
        app:cardBackgroundColor="#D7D4D8"
        app:cardCornerRadius="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_medicine1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paracip"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="27sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_times_today"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhiteTitle"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/paracipButton"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:text="0/1"
                android:padding="10sp"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10sp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D7D4D8"
        app:cardCornerRadius="20sp"
        android:layout_below="@+id/card2"
        android:layout_toRightOf="@+id/card1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_medicine2"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saradin"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="27sp"/>

            <TextView
                android:id="@+id/timesaday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_times_today"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhiteTitle"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/buttonmarkMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:text="1/1"
                android:padding="10sp"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</RelativeLayout>